%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: sunwukong
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Run
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Show
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Die
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Dizzy
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Hit
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Jump
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Skill 0
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Skill 1
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Skill 2
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Skill 3
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Skill 4
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Skill 5
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Idle
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Skill 6
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110271004}
  m_TransitionDuration: 0
  m_TransitionOffset: .00393135659
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .997998178
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110106891
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110272541}
  m_DstState: {fileID: 110271004}
  m_TransitionDuration: .00373634393
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .995329559
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110113923
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110263739}
  m_DstState: {fileID: 110271004}
  m_TransitionDuration: .00200163154
  m_TransitionOffset: .00393178174
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Show
    m_EventTreshold: 0
    m_ExitTime: .995996654
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110118528
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110261650}
  m_DstState: {fileID: 110271004}
  m_TransitionDuration: 0
  m_TransitionOffset: .00334190764
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .996674299
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110122607
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110222334}
  m_DstState: {fileID: 110276269}
  m_TransitionDuration: .203184113
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Jump
    m_EventTreshold: 0
    m_ExitTime: .609375
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110125362
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110223564}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Dizzy
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110128659
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110272541}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Skill 4
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110132770
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110277721}
  m_DstState: {fileID: 110271004}
  m_TransitionDuration: .000954982534
  m_TransitionOffset: .00326325069
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .997771502
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110138247
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110271004}
  m_DstState: {fileID: 110222334}
  m_TransitionDuration: .0774512887
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .949999988
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110141407
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110271004}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .144955501
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Skill 1
    m_EventTreshold: 1
    m_ExitTime: .953591526
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110144004
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110228014}
  m_DstState: {fileID: 110271004}
  m_TransitionDuration: .00187149202
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .996257007
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110147021
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110280411}
  m_TransitionDuration: .145765811
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Skill 5
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110148383
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110271004}
  m_DstState: {fileID: 110263739}
  m_TransitionDuration: .145103186
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Show
    m_EventTreshold: 0
    m_ExitTime: .949999988
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110154906
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110280411}
  m_DstState: {fileID: 110271004}
  m_TransitionDuration: .148645878
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill 5
    m_EventTreshold: 0
    m_ExitTime: .849907696
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110165654
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110276269}
  m_DstState: {fileID: 110222334}
  m_TransitionDuration: .152283102
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .847457469
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110173844
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110228014}
  m_TransitionDuration: .0467735864
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Hit
    m_EventTreshold: 0
    m_ExitTime: .949999988
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110182572
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110220178}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Skill 6
    m_EventTreshold: 0
    m_ExitTime: .996698558
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110183550
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110223564}
  m_DstState: {fileID: 110271004}
  m_TransitionDuration: .154373288
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Idle
    m_EventTreshold: 0
    m_ExitTime: .481140345
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110186950
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110260445}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Die
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110188376
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110220178}
  m_DstState: {fileID: 110271004}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill 6
    m_EventTreshold: 0
    m_ExitTime: .997282326
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110189909
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110222334}
  m_DstState: {fileID: 110271004}
  m_TransitionDuration: .149695665
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .609375
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110192576
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110271004}
  m_DstState: {fileID: 110277721}
  m_TransitionDuration: .154078305
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Skill 0
    m_EventTreshold: 0
    m_ExitTime: .95314765
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110194359
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110271004}
  m_DstState: {fileID: 110261650}
  m_TransitionDuration: .141920939
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Skill 2
    m_EventTreshold: 2
    m_ExitTime: .739583313
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: skill01
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 6b8b7356c63cf2e4fb2491a5e989cae8, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -180, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: skill
--- !u!1102 &110220178
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: skill06
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: dc38b10d1d8575048933c73f24aa3029, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 828, y: 348, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110222334
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: run
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: d2f74e250fa31654d94f3686eabfd84a, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -384, y: 288, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110223564
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: dizzy
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: b05954c416fad98419c35fd5da48f2c7, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -84, y: 348, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110228014
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: hit
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 8f4da35dd10250147aa3cf1790a55e84, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 132, y: 348, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110260445
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: die
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 7944d2b0819db394788444062257eb4b, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -336, y: 348, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110261650
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: skill02
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 1ab435cde344eed4f8237174bc0cba63, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 48, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: skill
--- !u!1102 &110263739
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: show
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: d73eb6466da09104fbe2b8289841043e, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 276, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110271004
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 8607155a35475974e93b83bdd3f84e58, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 108, y: 228, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: skill
--- !u!1102 &110272541
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: skill04
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: dc38b10d1d8575048933c73f24aa3029, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 348, y: 348, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110276269
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: jump
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 35b6ece900bd6ca40bc92df56d9c083b, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -384, y: 204, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110277721
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: attack
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 86d485078eb207645bc6a71f767a7ba8, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -420, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: skill
--- !u!1102 &110280411
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: skill05
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 05d9236786855374099032dd6ef7fac1, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 576, y: 348, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110271004}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110271004}
  - {fileID: 110277721}
  - {fileID: 110261650}
  - {fileID: 110272541}
  - {fileID: 110228014}
  - {fileID: 110222334}
  - {fileID: 110260445}
  - {fileID: 110223564}
  - {fileID: 110263739}
  - {fileID: 110276269}
  - {fileID: 110280411}
  - {fileID: 110220178}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110173844}
      - {fileID: 110125362}
      - {fileID: 110186950}
      - {fileID: 110128659}
      - {fileID: 110147021}
      - {fileID: 110182572}
    data:
      first: {fileID: 110271004}
      second:
      - {fileID: 110138247}
      - {fileID: 110141407}
      - {fileID: 110194359}
      - {fileID: 110192576}
      - {fileID: 110148383}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
    data:
      first: {fileID: 110277721}
      second:
      - {fileID: 110132770}
    data:
      first: {fileID: 110261650}
      second:
      - {fileID: 110118528}
    data:
      first: {fileID: 110272541}
      second:
      - {fileID: 110106891}
    data:
      first: {fileID: 110228014}
      second:
      - {fileID: 110144004}
    data:
      first: {fileID: 110222334}
      second:
      - {fileID: 110122607}
      - {fileID: 110189909}
    data:
      first: {fileID: 110260445}
      second: []
    data:
      first: {fileID: 110223564}
      second:
      - {fileID: 110183550}
    data:
      first: {fileID: 110263739}
      second:
      - {fileID: 110113923}
    data:
      first: {fileID: 110276269}
      second:
      - {fileID: 110165654}
    data:
      first: {fileID: 110280411}
      second:
      - {fileID: 110154906}
    data:
      first: {fileID: 110220178}
      second:
      - {fileID: 110188376}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 120, y: 504, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
